# cal_hamilton_parallel

./: LICENSE  README.md
README/: README.aux  README.tex
cuda_version/: Makefile  main.cu  scalapack.cpp
cuda_version/input/: INPUT.txt
cuda_version/tools/: input.h  spline.h
omp_version/: CMakeLists.txt  main.cpp
omp_version/input/: INPUT.txt
omp_version/tools/: CMakeLists.txt  diago.cpp  diago.h  input.cpp  input.h  spline.cpp  spline.h  timer.cpp  timer.h
